--- a/src/components/App.css
+++ b/src/components/App.css
@@ -86,14 +86,52 @@
   color: rgb(255, 255, 255);
 }
 
+.Left-Rotate-height-small {
+  transform: rotate(90deg);
+  display: block;
+  position: absolute;
+  top: 81%;
+  margin-top: -25px;
+  color: rgb(255, 255, 255);
+}
+
+.Left-Rotate-width-small {
+  transform: rotate(90deg);
+  display: block;
+  position: absolute;
+  top: 72%;
+  margin-top: -25px;
+  color: rgb(255, 255, 255);
+}
+
 .Right-Rotate {
   transform: rotate(270deg);
   display: block;
   position: absolute;
-  top: 41%;
+  top: 26%;
   margin-top: -25px;
   color: rgb(255, 255, 255);
-  width: 50px;
+  width: 265px;
+}
+
+.Right-Rotate-height-small {
+  transform: rotate(270deg);
+  display: block;
+  position: absolute;
+  top: 0%;
+  margin-top: -25px;
+  color: rgb(255, 255, 255);
+  width: 265px;
+}
+
+.Right-Rotate-width-small {
+  transform: rotate(270deg);
+  display: block;
+  position: absolute;
+  top: 26%;
+  margin-top: -25px;
+  color: rgb(255, 255, 255);
+  width: 260px;
 }
 
 .lightbox-image-caption {
@@ -106,6 +144,30 @@
     opacity: .75;
     border-radius: 8px;
     padding: 16px;
+}
+
+.lightbox-image-caption-height-small {
+  position: absolute;
+  width: 20%;
+  margin-left: 1%;
+  top: 63%;
+  background-image: linear-gradient(to bottom,rgba(255,255,255,0),rgba(0,0,0,.75),80%);
+  background-color: #000;
+  opacity: .75;
+  border-radius: 8px;
+  padding: 1px;
+}
+
+.lightbox-image-caption-width-small {
+  position: absolute;
+  width: 30%;
+  margin-left: 5%;
+  top: 62%;
+  background-image: linear-gradient(to bottom,rgba(255,255,255,0),rgba(0,0,0,.75),80%);
+  background-color: #000;
+  opacity: .75;
+  border-radius: 8px;
+  padding: 1px;
 }
 
 @keyframes App-logo-spin {
